Fixed DV issue with roll cards. Rollcards now change to show that damage has been applied and can be shift clicked to undo the damage

--- a/shimmeringreach/css/shimmeringreach.css
+++ b/shimmeringreach/css/shimmeringreach.css
@@ -737,7 +737,18 @@
                 width: 40px;
                 line-height: 40px;
 				filter:brightness(60%)sepia(0.5) hue-rotate(-50deg);
+}
 
+.undo-damage-block {
+				background-image: url(/modules/game-icons-net/whitetransparent/cancel.svg);
+                background-size: 40px 40px;
+				font-size: 20px;
+				padding: 0.0em 0.0em;
+                font-weight: bold;
+                text-align: center;
+                width: 40px;
+                line-height: 40px;
+				filter:brightness(60%)sepia(0.5) hue-rotate(-50deg);
 }
 
 .incoming-drain-block {
